Simplify list construction in QueryUtilsTest